# agent-study

./: .env.example  .gitignore  README.md  langgraph.json  package-lock.json  package.json  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements.txt  serverless.yml
src/: lambda_handler.py  minimal_llm.py  multi_agent_graph.py  simple_graph.py
src/archive/: multi_agent_graph_with_memory.py
