[project]
name = "agent_study"
version = "0.1.0"
description = "Minimal example Python package scaffold"
authors = [{name = "pocky-code"}]
requires-python = ">=3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

# Ruff configuration
[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and pyupgrade (UP)
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# pyright configuration
[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"  # Options: "off", "basic", "standard", "strict"
reportMissingImports = true
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true